unpackaged/post/08_redu_object_tracking/objects/rio_ed__PE_Pathway_Status__c.object
<CustomObject>
	<fields>
        <fullName>rio_ed__Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>PE Pathways</relationshipLabel>
        <relationshipName>PE_Pathway_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Automatically_Enroll_in_Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Enroll in Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rio_ed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Deferred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The process to automatically mark the Automatically Enroll in Courses checkbox will be ignored if this is checked.</inlineHelpText>
        <label>Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rio_ed__GPA__c</fullName>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Grade_Points__c</fullName>
        <label>Grade Points</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>PE Pathway</label>
    <nameField>
        <displayFormat>PEP-{0000}</displayFormat>
        <label>PE Pathway ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PE Pathways</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>